[B]1.0.4[/B][I]Jan 2013[/I]
- Bugfix, Musicviz - extrafanArt showing over CDWall
- BugFix, Setting for Hide LibraryStats/Info
- BugFix, Static CDWall taking over from Dynamic wall  

[B]1.0.3[/B][I]Dec 2012[/I]
- initial stable version
- VideoOSd uses artwork.downloader images
- Added EPG Genre Images
- Video OSD plot Info moves if no OSD menu
- Global Background Movie DB now user select directory
- Bugfix Widelist Episodes runtime showed over Plot
- Bugfix various home panel issues

[B]1.0.2[/B][I]Dec 2012[/I]
- Updated code and screenshots to XBMC guidelines
- Removed malformed studio icons
- Added "Frodo" Filter ability
- Tightned visibility on Fullwall & Lowlist
- Darkened LiveTV browser background
- Bugfix Invalid Include in video flags
- Bugfix Unmatched Parentheses in Video Info

[B]1.0.1[/B][I]Dec 2012[/I]
- English Language File Edited

[B]1.0.0[/B][I]Dec 2012[/I]
- Initial Commit