@@ -8,7 +8,7 @@
    <import addon="xbmc.gui" version="4.0.0"/>
    <import addon="service.skin.widgets" version="0.0.17"/>
    <import addon="script.artwork.downloader" version="12.0.12"/>
-   <import addon="script.favourites" version="4.0.4"/>
+   <import addon="script.favourites" version="4.0.7"/>
    <import addon="script.tvtunes" version="3.0.1"/>
    <import addon="script.artistslideshow" version="1.4.6"/>
    <import addon="script.simpleplaylists" version="1.1.0"/>
@@ -21,9 +21,43 @@
     <res width="1280" height="720" aspect="16:9" default="true" folder="720p" />
   </extension>
   <extension point="xbmc.addon.metadata">
+    <summary lang="be">Hybrid a customizable skin</summary>
+    <summary lang="ca">Hybrid una aparença personalitzable</summary>
+    <summary lang="de">Hybrid ist ein anpassbarer Skin</summary>
+    <summary lang="el">Hybrid, ένα προσαρμόσιμο κέλυφος</summary>
     <summary lang="en">Hybrid a customizable skin</summary>
+    <summary lang="fr">Hybrid est un thème personalisable</summary>
+    <summary lang="ko">Hybrid, 사용자 설정 스킨</summary>
+    <summary lang="lt">Hybrid teminė išvaizda</summary>
+    <summary lang="nl">Hybrid een aanpasbare skin</summary>
+    <summary lang="pl">Hybryda dopasowanej skórki</summary>
+    <summary lang="pt_BR">Hybrid uma skin customizada</summary>
+    <summary lang="sv">Hybrid ett anpassningsbart skal</summary>
+    <summary lang="zh">Hybrid 一套可定制的皮肤</summary>
+    <description lang="be">Hybrid is a customizable skin incorporating many of the now popular tweaks, addons and scripts.</description>
+    <description lang="ca">Hybrid és una aparença personalitzable que incorpora molts dels ara populars ajustaments, complements i scripts.</description>
+    <description lang="de">Hybrid ist ein anpasserbarer Skin der die beliebten Optimierungen, AddOns und Scripte umfasst.</description>
+    <description lang="el">Το Hybrid είναι ένα προσαρμόσιμο κέλυφος που περιλαμβάνει πολλά από τα πλέον δημοφιλή tweaks, πρόσθετα και scripts.</description>
     <description lang="en">Hybrid is a customizable skin incorporating many of the now popular tweaks, addons and scripts.</description>
+    <description lang="es">Hybrid es un skin personalizable que incorpora muchos de los ajustes, addons y scripts más populares</description>
+    <description lang="fr">Hybrid est un thème personalisable incluant de nombreux Add-ons, scripts et améliorations populaires</description>
+    <description lang="ko">Hybrid는 사용자 설정이 가능한 스킨으로 최신 트윅, 추가기능, 스크립트를 지원합니다.</description>
+    <description lang="lt">'Hybrid' yra pritaikyta teminė išvaizda katros sudėtyje yra labai populiarių (pa-)tobulinimų, priedų ir skriptų.</description>
+    <description lang="nl">Hybrid is een aanpasbare skin waarin veel van de nu populaire tweaks, addons en scripts zijn verwerkt.</description>
+    <description lang="pl">Hybryda to dopasowana skórka zawierająca wiele popularnych usprawnień, dodatków i skryptów.</description>
+    <description lang="pt_BR">Hybrid é uma skin customizada que incorpora muitos tweaks, add-ons e scripts populares.</description>
+    <description lang="sv">Hybrid är ett anpassningsbart skal som innehåller många av dom nu populära anpassningarna, tilläggen och skripten.</description>
+    <description lang="zh">Hybrid是一套可定制的皮肤具备许多流行的改进，插件和脚本。</description>
+    <disclaimer lang="be">You break it - You get to keep the pieces</disclaimer>
+    <disclaimer lang="de">You break it - You get to keep the pieces</disclaimer>
+    <disclaimer lang="el">You break it - You get to keep the pieces</disclaimer>
     <disclaimer lang="en">You break it - You get to keep the pieces</disclaimer>
+    <disclaimer lang="fr">Vous le cassez, vous assumez!</disclaimer>
+    <disclaimer lang="lt">You break it - You get to keep the pieces</disclaimer>
+    <disclaimer lang="nl">You break it - You get to keep the pieces</disclaimer>
+    <disclaimer lang="pl">Zepsułeś to - Pozbieraj kawałki</disclaimer>
+    <disclaimer lang="pt_BR">Se quebrar - Você começa a manter as peças</disclaimer>
+    <disclaimer lang="sv">Om du har sönder det - Får du behålla bitarna</disclaimer>
     <platform>all</platform>
   </extension>
 </addon>
