@@ -1,7 +1,14 @@
 [B]1.0.4[/B][I]Jan 2013[/I]
+- New Dependency script.favourites.4.0.7
+- Added New & Updated lang Files
+- SysInfo, Profiles & FileManager Files Updated
+- Added VideoOSD Overlay for PseudoTV
+- Added ability for individual fanart settings in HomePanel
 - Bugfix, Musicviz - extrafanArt showing over CDWall
 - BugFix, Setting for Hide LibraryStats/Info
-- BugFix, Static CDWall taking over from Dynamic wall  
+- BugFix, Static CDWall taking over from Dynamic wall
+- Bugfix, Musicviz - extrafanArt showing over CDWall
+- BugFix, Setting for Hide LibraryStats/Info
 
 [B]1.0.3[/B][I]Dec 2012[/I]
 - initial stable version
